--- a/vignettes/ColinearityInterruptors.Rmd
+++ b/vignettes/ColinearityInterruptors.Rmd
@@ -548,3 +548,16 @@ ggmsa::ggmsa(seqs_aln, 151, 200, seq_name = TRUE) /
 ggmsa::ggmsa(seqs_aln, 201, 250, seq_name = TRUE) /
 ggmsa::ggmsa(seqs_aln, 251, 300, seq_name = TRUE)
 ```
+
+## Autocorrelations
+
+There appears to be a small tendency that short width regions are followed by
+short width regions, but I am not sure if I understand the statistics well.
+
+```{r autocorrelations}
+plot(width(coa$Oki_Osa), c(tail(width(coa$Oki_Osa), -1), NA), log = 'xy', pch='.')
+acf(width(coa$Oki_Osa), lag.max = 1000)
+acf(sample(width(coa$Oki_Osa)), lag.max = 1000)
+pacf(width(coa$Oki_Osa), lag.max = 100)
+pacf(sample(width(coa$Oki_Osa)), lag.max = 100)
+```
