Adapt to latest update in LoadGenomicBreaks.

--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -55,7 +55,7 @@ makeWidthsDF <- function (objList) {
       sub(pat = "^X$",    rep = "Dro")    |>
       sub(pat = "^Y$",    rep = "Dro")   
 
-    DF$query <- DF$score <- DF$rep <- DF$transcripts <- NULL
+    DF$query <- DF$score <- DF$rep <- DF$repOvlp <- DF$transcripts <- NULL
     DF$dist  <- OikScrambling:::compDistance(DF$name)
     DF$distS <- OikScrambling:::compDistance(DF$name, short = TRUE)
     DF$genus <- OikScrambling:::compGenus(DF$name)
