--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -348,6 +348,19 @@ intervals.  We tried some width cutoffs on the coalescing step, but at 500 bp,
 the coverage of the genome by the resulting mapped regions is already decreasing
 (`vignette("CoalescingCutoffs", package = "OikScrambling")`).
 
+### Non-coalesced mapped regions
+
+The mapped regions that are found identical in the aligned set are those that
+were not coalesced... Are they the small peak ?
+
+```{r non_coalesced_mapped_regions}
+for(name in names(coa)) {
+  coa[[name]]$nonCoa <- coa[[name]] %in% gbs [[name]]
+}
+widths$coa$nonCoa <- sapply(coa, \(x) x$nonCoa) |> unlist()
+
+```
+
 ### Focus on Oki – North comparisons
 
 ```{r mapped_region_widths_Oki_vs_North}
@@ -361,7 +374,10 @@ p_hist
 
 # The cutoff at 600 is good enough for both arms
 p_hist + facet_wrap(~Arm)
+p_hist + facet_wrap(~nonCoa + Arm)
 ```
+
+The short-width mapped peak is made of aligned regions that can not be coalesced.
 
 We know from `vignette("RepeatRegions", package = "OikScrambling")` that these
 short mapped regions are not repeats.
