--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -357,8 +357,8 @@ As expected, both types of mapped regions are depleted for repeats.
 Surprisingly, in both cases the depletion is relaxed after ~200 bp only.
 
 ```{r genomic_repeats_bpByWidth, cache=FALSE}
-plotHeatmapMeta(list(feature_coverage(current_GB_wide,   reps$Oki, win = 1e3, lab = "wide",    direction = "left")))
-plotHeatmapMeta(list(feature_coverage(current_GB_narrow, reps$Oki, win = 1e3, lab = "narrow",  direction = "left")))
+plotHeatmapMeta(list(feature_coverage(current_GB_wide,   reps$Oki, win = 1e3, lab = "repeats",  direction = "left")))
+plotHeatmapMeta(list(feature_coverage(current_GB_narrow, reps$Oki, win = 1e3, lab = "repeats",  direction = "left")))
 ```
 
 ### PWM
